# leptos-boring-ssr

./: Cargo.toml
src/: main.rs
