[package]
name = "leptos-boring-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
leptos = { version = "0.5.7", features = ["ssr"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
